# audio_samples

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_ROADMAP.md  PLOTTING.md  README.md  ROADMAP.md  STYLE_GUIDE.md  audio_samples.pyi  generate_all_stubs.sh  generate_integrated_stub.py  performance_analysis.py  pyproject.toml  test_convert_from.rs  test_waveform_plot.html
.cargo/: config.toml
.github/workflows/: ci.yml
bench_suite/benches/: bench_beat_branch_misses.rs  bench_beat_cache_misses.rs  bench_beat_cycles.rs  bench_beat_instructions.rs  bench_beat_walltime.rs  bench_chan_branch_misses.rs  bench_chan_cache_misses.rs  bench_chan_cycles.rs  bench_chan_instructions.rs  bench_chan_walltime.rs  bench_comp_branch_misses.rs  bench_comp_cache_misses.rs  bench_comp_cycles.rs  bench_comp_instructions.rs  bench_comp_walltime.rs  bench_conv_branch_misses.rs  bench_conv_cache_misses.rs  bench_conv_cycles.rs  bench_conv_instructions.rs  bench_conv_walltime.rs  bench_dec_branch_misses.rs  bench_dec_cache_misses.rs  bench_dec_cycles.rs  bench_dec_instructions.rs  bench_dec_walltime.rs  bench_det_branch_misses.rs  bench_det_cache_misses.rs  bench_det_cycles.rs  bench_det_instructions.rs  bench_det_walltime.rs  bench_dr_branch_misses.rs  bench_dr_cache_misses.rs  bench_dr_cycles.rs  bench_dr_instructions.rs  bench_dr_walltime.rs  bench_edit_branch_misses.rs  bench_edit_cache_misses.rs  bench_edit_cycles.rs  bench_edit_instructions.rs  bench_edit_walltime.rs  (+90 more)
bench_suite/benches_shared/: beat.rs  chan.rs  comp.rs  conv.rs  dec.rs  det.rs  dr.rs  edit.rs  env.rs  eq.rs  fixed.rs  gen.rs  iir.rs  iter.rs  math.rs  onset.rs  pitch.rs  plot.rs  pp.rs  proc.rs  psy.rs  repr.rs  resamp.rs  stats.rs  trans.rs  vad.rs
bench_suite/common/: Cargo.toml
bench_suite/common/src/: lib.rs
bench_suite/scripts/: harvest.py  host_setup.sh  run_and_collect.sh  run_full_suite.sh  write_manifest.sh
benches/: codec_parallel.rs  conversions.rs  dynamics.rs  ffmpeg_comparison.rs  filtering.rs  generation.rs  size_aware_fft_benchmark.rs  transforms.rs
benchmarks/: Makefile  results.csv  run.sh  visualise.py
benchmarks/c/: channels.c  common.h  editing.c  filter.c  format_conv.c  processing.c  resample.c  volume.c
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: lib.rs
documentation/: ARCHITECTURE.md  MIGRATING_TO_2.0.md  STYLE_GUIDE.md
examples/: autocorr_benchmark.rs  basic_audio_processing.rs  basic_plotting.rs  basics.rs  beat_tracking_with_progress.rs  beats.rs  chainable_results_demo.rs  channel_simd_benchmark.rs  channels.rs  chroma.rs  cow_conversions_demo.rs  detection.rs  dynamic_range.rs  editing.rs  educational.rs  error_diagnostics.rs  errors.rs  hpss.rs  iir_filtering.rs  iterators_demo.rs  mutable_iterators_demo.rs  onset.rs  oscillator_box.rs  parametric_eq.rs  peak_benchmark.rs  pitch_analysis.rs  plotting.rs  plotting_auto_zoom.rs  plotting_basic.rs  plotting_composite_advanced.rs  plotting_composite_basics.rs  plotting_configurable_padding.rs  plotting_demo.rs  plotting_dsp_overlays.rs  plotting_event_markers.rs  plotting_overlays.rs  plotting_spectral_overlays.rs  plotting_spectrum.rs  processing.rs  processing_builder_demo.rs  (+19 more)
python/audio_samples/: __init__.py  _helpers.py  display.py  display_old.py  jupyter.py
site/: config.toml
site/public/: index.html  sitemap.xml  style.css  themes.css
site/public/posts/part-i/: index.html
site/sass/: style.scss  themes.scss
site/templates/: base.html  index.html  post.html
src/: conversions.rs  error.rs  fixed_audio.rs  iterators.rs  lib.rs  minimal.rs  operations.rs  realtime.rs  repr.rs  resampling.rs  simd_conversions.rs  spectral.rs  streaming_playback.rs  traits.rs  utils.rs  views.rs
src/batch/: builder.rs  error.rs  mod.rs  operations.rs  parallel.rs  progress.rs  traits.rs
src/codecs/: mod.rs
src/codecs/opus/: celt.rs  codec.rs  hybrid.rs  lpc.rs  mod.rs  mode.rs  silk.rs  stereo.rs
src/codecs/perceptual/: bands.rs  codec.rs  masking.rs  mod.rs  quantization.rs  stereo.rs  traits.rs
src/educational/: mod.rs  processing.rs
src/generation/: signal_gen.rs
src/operations/: beat.rs  beats.rs  channels.rs  conversions.rs  dithering.rs  dynamic_range.rs  editing.rs  envelopes.rs  fft_backends.rs  fft_convolution.rs  hpss.rs  iir_filtering.rs  mod.rs  onset_detection.rs  parametric_eq.rs  peak_picking.rs  pitch_analysis.rs  plotting.rs  processing.rs  serialization.rs  statistics.rs  traits.rs  transforms.rs  types.rs  vad.rs
src/operations/onset/: complex.rs  filters.rs  flux.rs  kernels.rs  mod.rs
src/operations/plotting/: builders.rs  composer.rs  composite.rs  core.rs  dsp_overlays.rs  elements.rs  lissajous.rs  mod.rs  phase_spectrum.rs  plotting.rs  plotting_trait.rs  spectrograms.rs  spectrum.rs  waveform.rs
src/playback/: devices.rs  effects.rs  effects_complex.rs  error.rs  mixer.rs  mod.rs  player.rs  simple_player.rs  streaming_player.rs  traits.rs
src/python/: conversions.rs  dynamic_range.rs  editing.rs  generation.rs  iir_filtering.rs  mod.rs  parametric_eq.rs  playback.rs  processing.rs  statistics.rs  streaming.rs  transforms.rs  utils.rs  utils_bindings.rs
src/streaming/: buffers.rs  error.rs  mod.rs  stream.rs  traits.rs
src/streaming/sources/: file.rs  generator.rs  mod.rs  tcp.rs  udp.rs
src/streaming/tests/: buffer_tests.rs  error_tests.rs  generator_tests.rs  mod.rs  stream_tests.rs
src/utils/: audio_math.rs  comparison.rs  detection.rs  generation.rs  mod.rs
tests/: analysis_pipeline.rs  channel_pipeline.rs  codec_quality.rs  educational_integration.rs  effects_chain.rs  opus_codec_quality.rs  plotting_integration.rs  processing_pipeline.rs  proptest_invariants.rs  utils_integration.rs
